manifest/patientinfo-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: patientinfo-api
spec:
  type: ClusterIP
  selector:
    app: patientinfo-api
  ports:
  - port: 80
